# 90-my-quant-bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  backtester.py  brokers.py  data.py  execution.py  main.py  models.py  paper.py  portfolio.py  storage.py  strategies.py
backend/tests/: test_api.py  test_backtester.py  test_brokers.py  test_data_cache.py  test_execution.py  test_paper.py
docs/: bot-fleet-operator.md  bot-run-guide-ko.md  completion-audit.md  deployment-hardening.md  mvp-implementation-notes.md  next-steps-ko.md  production-observability.md  quant-lab-guide.md  quant-trading-proposal.md  release-readiness.md  stock-etf-data-setup.md  upbit-private-setup.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
scripts/: archive_live_beta_closeout.py  check_completion_audit.py  check_external_readiness.py  check_frontend_theme.py  check_release_evidence.py  connected_runner_acceptance.py  connected_runner_contract.py  handoff_commands.py  next_release_step.py  ops_smoke_check.py  package_connected_runner_handoff.py  package_evidence.py  release_artifacts.py  release_gate.py  release_manifest.py  report_release_status.py  review_release_warnings.py  run_local_app.py  run_local_smoke.py  seed_crypto_drill.py  test_archive_live_beta_closeout.py  test_check_completion_audit.py  test_check_external_readiness.py  test_check_frontend_theme.py  test_check_release_evidence.py  test_connected_runner_acceptance.py  (+12 more)
(+3 files in other folders)
