[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-lab-backend"
version = "0.1.0"
description = "FastAPI backend for the Quant Lab trading workspace"
requires-python = ">=3.9"
dependencies = [
  "duckdb>=1.1,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2,<3",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
